Preventing long custom folder names from causing the 'All Folders' select element in the Other Media page to run off the screen when viewing on narrow windows.

--- a/assets/css/files-list.css
+++ b/assets/css/files-list.css
@@ -6,6 +6,7 @@
 	height: auto;
 	padding: 2px 20px 3px 6px;
 	margin: 15px 12px 0 0;
+	max-width: 100%;
 }
 .imagify-files-list .filter-items .button {
 	height: auto;
